--- a/src/BlazorRoslib/RosToolbox/Properties/launchSettings.json
+++ b/src/BlazorRoslib/RosToolbox/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://localhost:5229;https://localhost:7219;",
+      "applicationUrl": "https://localhost:7219;http://localhost:5229;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
