--- a/src/BlazorRoslib/BlazorRoslib/UI/BlazorRoslib.UI.csproj
+++ b/src/BlazorRoslib/BlazorRoslib/UI/BlazorRoslib.UI.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.10" />
     <PackageReference Include="MudBlazor" Version="6.0.17" />
   </ItemGroup>
 
@@ -23,10 +23,15 @@
     <Folder Include="wwwroot\" />
     <Folder Include="Helpers\" />
     <Folder Include="Helpers\Converters\" />
+    <Folder Include="Ros3D\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="MudBlazor" />
     <None Remove="Helpers\" />
     <None Remove="Helpers\Converters\" />
+    <None Remove="Ros3D\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\BlazorRoslib.Core.csproj" />
   </ItemGroup>
 </Project>
