--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Restore Workloads
+      working-directory: ./src/BlazorRoslib/RosToolbox
+      run: dotnet workload restore
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
       working-directory: ./src/BlazorRoslib/RosToolbox
