--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -20,7 +20,9 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore Workloads
       working-directory: ./src/BlazorRoslib/RosToolbox
-      run: dotnet workload restore
+      run: |
+        dotnet workload restore
+        dotnet workload install wasm-tools-net6
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
       working-directory: ./src/BlazorRoslib/RosToolbox
