--- a/.github/workflows/build_local_hosting.yml
+++ b/.github/workflows/build_local_hosting.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Deploy to GitHub Pages
+name: Build RosToolbox for local hosting
 
 on:
   push:
