--- a/.github/workflows/build_local_hosting.yml
+++ b/.github/workflows/build_local_hosting.yml
@@ -12,8 +12,8 @@ jobs:
     
     runs-on: ubuntu-latest
     env: 
-      CI_COMMIT_MESSAGE: CI update for local hosting
-      CI_COMMIT_AUTHOR: Continuous Integration
+      CI_COMMIT_MESSAGE: Update for local hosting
+      CI_COMMIT_AUTHOR: CI
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -39,5 +39,5 @@ jobs:
       run: |
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
         git config --global user.email "username@users.noreply.github.com"
-        git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
+        git commit -a -m "${{ env.CI_COMMIT_MESSAGE }} - ${{ github.event.head_commit.message }}"
         git push
