--- a/.github/workflows/build_local_hosting.yml
+++ b/.github/workflows/build_local_hosting.yml
@@ -39,5 +39,6 @@ jobs:
       run: |
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
         git config --global user.email "username@users.noreply.github.com"
+        git add *
         git commit -a -m "${{ env.CI_COMMIT_MESSAGE }} - ${{ github.event.head_commit.message }}"
         git push
