--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -22,7 +22,7 @@ jobs:
       working-directory: ./src/BlazorRoslib/RosToolbox
       run: |
         dotnet workload restore
-        dotnet workload install wasm-tools-net6
+        dotnet workload install wasm-tools
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
       working-directory: ./src/BlazorRoslib/RosToolbox
