Add memory limit

--- a/src/BlazorRoslib/RosToolbox/RosToolbox.csproj
+++ b/src/BlazorRoslib/RosToolbox/RosToolbox.csproj
@@ -30,6 +30,7 @@
     <PlatformTarget>anycpu</PlatformTarget>
     <Nullable></Nullable>
   </PropertyGroup>
+  <EmccTotalMemory Condition="'$(Configuration)'=='Release'">134217728</EmccTotalMemory>
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
