--- a/src/BlazorRoslib/RosToolbox/RosToolbox.csproj
+++ b/src/BlazorRoslib/RosToolbox/RosToolbox.csproj
@@ -16,6 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>anycpu</PlatformTarget>
+    <EmccTotalMemory>134217728</EmccTotalMemory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'GitHubPages|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,8 +30,8 @@
     <NoWarn></NoWarn>
     <PlatformTarget>anycpu</PlatformTarget>
     <Nullable></Nullable>
+    <EmccTotalMemory>134217728</EmccTotalMemory>
   </PropertyGroup>
-  <EmccTotalMemory Condition="'$(Configuration)'=='Release'">134217728</EmccTotalMemory>
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
