--- a/src/BlazorRoslib/RosToolbox/wwwroot/manifest.json
+++ b/src/BlazorRoslib/RosToolbox/wwwroot/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#8BC34A",
+  "theme_color": "#FFBF00",
   "prefer_related_applications": false,
   "icons": [
     {
