--- a/src/BlazorRoslib/RosToolbox/RosToolbox.csproj
+++ b/src/BlazorRoslib/RosToolbox/RosToolbox.csproj
@@ -57,6 +57,7 @@
     <None Remove="Components\DashboardCards\" />
     <None Remove="CustomPackages\" />
     <None Remove="CustomPackages\DataRecording\" />
+    <None Remove="CustomPackages\HealthChecks\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
@@ -73,5 +74,6 @@
     <Folder Include="Components\DashboardCards\" />
     <Folder Include="CustomPackages\" />
     <Folder Include="CustomPackages\DataRecording\" />
+    <Folder Include="CustomPackages\HealthChecks\" />
   </ItemGroup>
 </Project>
