Add Snackbar messages

--- a/src/BlazorRoslib/RosToolbox/RosToolbox.csproj
+++ b/src/BlazorRoslib/RosToolbox/RosToolbox.csproj
@@ -39,9 +39,11 @@
   <ItemGroup>
     <ProjectReference Include="..\BlazorRoslib\Core\BlazorRoslib.Core.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+      <ReferenceSourceTarget>ProjectReference</ReferenceSourceTarget>
     </ProjectReference>
     <ProjectReference Include="..\BlazorRoslib\UI\BlazorRoslib.UI.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+      <ReferenceSourceTarget>ProjectReference</ReferenceSourceTarget>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
